Modified to accommodate Kodi v18 Leia     li.setInfo(type='video', infoLabels=None) Made compatible with different platforms     Changed the way to handle tempdir and list_installed_addons     Added the valid duration for the gist quickfix in case of an existing previous file Merged get_link_contents() with get_link_redir() Removed the dependency on script.module.youtube.dl Removed the support of using youku Added two sites: gimy and kubo     Already added previously by using the gist quickfix

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -24,6 +24,10 @@ msgctxt "#30103"
 msgid "Hash"
 msgstr ""
 
+msgctxt "#30104"
+msgid "Valid duration (seconds)"
+msgstr ""
+
 msgctxt "#30111"
 msgid "Notification on screen (mainly for debugging)"
 msgstr ""
